# graphrag-financial-intelligence

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
app/: README.md  api.py  config.py  embeddings.py  schemas.py
docs/: entity-resolution-policy.md
evaluation/: README.md  ragas_runner.py  test_questions.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerPanel.tsx  DiagnosticsPanel.tsx  Header.tsx  QueryBox.tsx
frontend/src/types/: api.ts
graph/: README.md  client.py  queries.py  schema.py
ingestion/: README.md
ingestion/chunkers/: section_chunker.py
ingestion/extractors/: llm_extractor.py  schemas.py
ingestion/parsers/: pdf_parser.py
ingestion/resolvers/: entity_resolver.py  normalizer.py
ingestion/writers/: neo4j_writer.py  pinecone_writer.py
retrieval/: README.md  graph_retriever.py  hybrid.py  query_planner.py  synthesizer.py  vector_retriever.py
scripts/: README.md  ask.py  check_neo4j.py  check_pinecone.py  debug_faithfulness.py  demo_retrieval.py  index_neo4j.py  index_pinecone.py  inspect_chunks.py  inspect_extraction.py  inspect_pdf.py  resolve_entities.py  run_eval.py  serve.py
tests/: README.md
