[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-financial-intelligence"
version = "0.1.0"
description = "Knowledge-graph-augmented RAG over SEC 10-K filings"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # ---- API ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",

    # ---- AWS / Bedrock ----
    "boto3>=1.35.0",

    # ---- Graph database ----
    "neo4j>=5.23.0",

    # ---- Vector database ----
    "pinecone>=5.0.0",
    # NOTE: pinecone-text (BM25 sparse encoder) deferred to milestone 3.
    # mmh3 4.x has no Python 3.13 Windows wheels and requires MSVC to build from source.
    # We'll evaluate pinecone-text vs rank-bm25 (pure Python) when we add hybrid search.

    # ---- Document pipeline ----
    "unstructured[pdf]>=0.15.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-bedrock>=0.2.0",
    "llama-index-embeddings-bedrock>=0.2.0",
    "llama-index-graph-stores-neo4j>=0.2.0",
    "llama-index-vector-stores-pinecone>=0.2.0",

    # ---- Observability ----
    "langsmith>=0.1.100",

    # ---- Evaluation ----
    "ragas>=0.2.0",
    "datasets>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["app*", "ingestion*", "graph*", "retrieval*", "evaluation*", "scripts*"]
exclude = ["tests*", "frontend*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RET"]
ignore = ["E501"]  # line length is handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real Neo4j / Pinecone (slow)",
    "unit: pure logic tests (fast)",
]
